<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">


<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="#fff"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <include
            layout="@layout/simple_calculator_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ccc"
                    android:minHeight="80dp"
                    android:text="@string/c"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_7"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_8"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_9"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_multiple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ccc"
                    android:minHeight="80dp"
                    android:text="@string/x"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_4"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_5"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_6"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ccc"
                    android:minHeight="80dp"
                    android:text="@string/_"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    style="?android:buttonBarButtonStyle"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_1"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_2"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_3"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ccc"
                    android:minHeight="80dp"
                    android:text="@string/plus"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/_0"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:minHeight="80dp"
                    android:text="@string/div"
                    android:textColor="#333"
                    android:textSize="25sp" />

            <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btn_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#666"
                    android:minHeight="80dp"
                    android:text="@string/equals"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>